# presale-contracts

./: .env.example  .gitignore  AUDIT_REMEDIATION_SUMMARY.md  BSC_VERIFICATION_GUIDE.md  SNRGtoken.sol  SOLANA_DEPLOYMENT_GUIDE.md  SOLANA_SECURITY_AUDIT_REPORT.md  auditfindings.json  auditfindings_updated.json  decrypt.sh  deploy_vanity_contracts.js  encoded.txt  package-lock.json
audit_final/: BSC_SNRGPresale.md  BSC_SNRGStaking.md  BSC_SNRGSwap.md  BSC_SNRGToken.md  BSC_SelfRescueRegistry.md  BSC_Timelock.md  Ethereum_SNRGPresale.md  Ethereum_SNRGStaking.md  Ethereum_SNRGSwap.md  Ethereum_SNRGToken.md  Ethereum_SelfRescueRegistry.md  Ethereum_Timelock.md  Polygon_SNRGPresale.md  Polygon_SNRGStaking.md  Polygon_SNRGSwap.md  Polygon_SNRGToken.md  Polygon_SelfRescueRegistry.md  Polygon_Timelock.md  Solana_self_rescue_registry.md  Solana_snrg_presale.md  Solana_snrg_staking.md  Solana_snrg_swap.md  Solana_snrg_timelock.md  Solana_snrg_token.md
audit_initial/: BSC_SNRGPresale.md  BSC_SNRGStaking.md  BSC_SNRGSwap.md  BSC_SNRGToken.md  BSC_SelfRescueRegistry.md  BSC_Timelock.md  Ethereum_SNRGPresale.md  Ethereum_SNRGStaking.md  Ethereum_SNRGSwap.md  Ethereum_SNRGToken.md  Ethereum_SelfRescueRegistry.md  Ethereum_Timelock.md  Polygon_SNRGPresale.md  Polygon_SNRGStaking.md  Polygon_SNRGSwap.md  Polygon_SNRGToken.md  Polygon_SelfRescueRegistry.md  Polygon_Timelock.md  Solana_self_rescue_registry.md  Solana_snrg_presale.md  Solana_snrg_staking.md  Solana_snrg_swap.md  Solana_snrg_timelock.md  Solana_snrg_token.md
bnb-smart-chain/contracts/: BSC-SNRGstaking.sol  SNRGpresale.sol  SNRGstaking.sol  SNRGswap.sol  SNRGtimelock.sol  SNRGtoken.sol
docs/: SNRGpresale.md  SNRGstaking.md  SNRGswap.md  SNRGtimelock.md  SNRGtoken.md  SelfRescueRegistry.md  self_rescue_registry_program.md  snrg_presale.md  snrg_staking.md  snrg_swap.md  snrg_timelock.md  snrg_token.md
ethereum/: .env  .env.example  .solhint.json  foundry.toml  hardhat.config.js  package-lock.json  package.json  test_ethers.js  test_hre.mjs  test_network.js
ethereum/artifacts/@openzeppelin/contracts/governance/TimelockController.sol/: TimelockController.json
ethereum/artifacts/contracts/SNRGStaking_flattened.sol/: Context.json  IERC20.json  Ownable.json  ReentrancyGuard.json  SNRGStaking.json
ethereum/artifacts/contracts/SNRGpresale.sol/: SNRGPresale.json
ethereum/artifacts/contracts/SNRGpresale_flattened.sol/: Context.json  ECDSA.json  IERC20.json  Ownable.json  ReentrancyGuard.json  SNRGPresale.json
ethereum/artifacts/contracts/SNRGstaking.sol/: SNRGStaking.json
ethereum/artifacts/contracts/SNRGswap.sol/: IBurnable.json  SNRGSwap.json
ethereum/artifacts/contracts/SNRGswap_flattened.sol/: Context.json  IBurnable.json  IERC20.json  Ownable.json  ReentrancyGuard.json  SNRGSwap.json
ethereum/artifacts/contracts/SNRGtimelock.sol/: Timelock.json
ethereum/artifacts/contracts/SNRGtoken.sol/: IRescueRegistry.json  SNRGToken.json
ethereum/artifacts/contracts/SNRGtoken_flattened.sol/: Context.json  ECDSA.json  EIP712.json  ERC20.json  ERC20Burnable.json  ERC20Permit.json  IERC1155Errors.json  IERC20.json  IERC20Errors.json  IERC20Metadata.json  IERC20Permit.json  IERC5267.json  IERC721Errors.json  IRescueRegistry.json  Math.json  MessageHashUtils.json  Nonces.json  Ownable.json  Panic.json  SNRGToken.json  SafeCast.json  ShortStrings.json  SignedMath.json  StorageSlot.json  Strings.json
ethereum/artifacts/contracts/SelfRescueRegistry.sol/: IRestrictedToken.json  SelfRescueRegistry.json
ethereum/artifacts/contracts/SelfRescueRegistry_flattened.sol/: Context.json  IERC20.json  IRestrictedToken.json  Ownable.dbg.json  Ownable.json  SelfRescueRegistry.json
ethereum/contracts/: ETH-SNRGtimelock.sol  SNRGpresale.sol  SNRGstaking.sol  SNRGswap.sol  SNRGtimelock.sol  SNRGtoken.sol  SelfRescueRegistry.sol
ethereum/scripts/: deploy_contracts.js  deploy_sepolia_contracts.js
networks/polygon/contracts/: SNRGpresale.sol
networks/solana/programs/snrg_presale/: Cargo.toml
networks/solana/programs/snrg_presale/src/: lib.rs
networks/solana/programs/snrg_self_rescue_registry/: Cargo.toml
networks/solana/programs/snrg_swap/: Cargo.toml
networks/solana/programs/snrg_timelock/: Cargo.toml
networks/solana/programs/snrg_timelock/src/: lib.rs
networks/solana/programs/snrg_token/src/: lib.rs
polygon/contracts/: POL-SNRGpresale.sol  POL-SNRGstaking.sol  POL-SNRGswap.sol  POL-SNRGtimelock.sol  POL-SNRGtoken.sol  POL-SelfRescueRegistry.sol  SNRGSelfRescueRegistry.sol  SNRGpresale.sol  SNRGstaking.sol  SNRGtimelock.sol  SNRGtoken.sol  SelfRescueRegistry.sol
scripts/: deploy_contracts.js  deploy_solana_programs.sh  deploy_timelocks.js
sepolia/: deployment-sepolia.json  hardhat.config.cjs  hardhat.config.js  package-lock.json  package.json  verify_etherscan.sh
sepolia/contracts/: SNRGpresale.sol  SNRGstaking.sol  SNRGswap.sol  SelfRescueRegistry_flattened.sol
sepolia/docs/: SNRGpresale.md  SelfRescueRegistry.md
sepolia/scripts/: deploy.js  verify.js  verify.sh  verify_contracts.cjs
solana/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
solana/migrations/: deploy.ts
solana/programs/: SNRG1DdzBPRrmcPaiatTg2Buitweaw8p6UoYnGTLPUk.json
solana/programs/self_rescue_registry/: Cargo.toml
solana/programs/self_rescue_registry/src/: lib.rs
solana/programs/snrg_presale/: Cargo.toml
solana/programs/snrg_presale/src/: lib.rs
solana/programs/snrg_self_rescue_registry/src/: lib.rs
solana/programs/snrg_staking/: Cargo.toml
solana/programs/snrg_staking/src/: lib.rs
solana/programs/snrg_swap/: Cargo.toml
solana/programs/snrg_swap/src/: lib.rs
solana/programs/snrg_timelock/: Cargo.toml
solana/programs/snrg_timelock/src/: lib.rs
solana/programs/snrg_token/: Cargo.toml
solana/programs/snrg_token/src/: lib.rs
temp_build/snrg_staking/: Cargo.toml
temp_build/snrg_staking/src/: lib.rs
test-workspace/: Anchor.toml
test-workspace/programs/test-workspace/: Cargo.toml
test-workspace/programs/test-workspace/src/: lib.rs
test-workspace/tests/: test-workspace.ts
(+9 files in other folders)
