[package]
name = "snrg_token"
version = "1.0.0"
description = "SNRG – Official SPL Token with Metadata (9 decimals, fixed supply, mint authority revoked post-launch)"
edition = "2021"
license = "MIT"
homepage = "https://synergy-network.io"
repository = "https://github.com/synergy-network-hq/contracts_and_programs"
keywords = ["solana", "spl-token", "metadata", "snrg"]
categories = ["cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]
name = "snrg_token"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-metadata = { version = "0.2.0", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.2.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
overflow-checks = true