[package]
name = "self_rescue_registry"
version = "0.2.0"
description = "Exact Solana port of SelfRescueRegistry.sol – secure self-rescue with opt-in approval"
edition = "2021"
license = "MIT"
homepage = "https://synergy-network.io"
repository = "https://github.com/synergy-network-hq/contracts_and_programs"
keywords = ["solana", "anchor", "token-rescue", "recovery", "merkle"]
categories = ["cryptocurrency", "blockchain"]

[lib]
crate-type = ["cdylib", "lib"]
name = "snrg_swap"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
overflow-checks = true