[package]
name = "snrg_timelock"
version = "0.2.0"
description = "Exact Solana port of OpenZeppelin TimelockController — 2-30 day delay, multisig proposer/admin, permissionless executor"
edition = "2021"
license = "MIT"
homepage = "https://snrg.io"
repository = "https://github.com/snrg-labs/snrg-solana"
keywords = ["solana", "anchor", "governance", "timelock", "openzeppelin"]
categories = ["cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]
name = "snrg_timelock"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
overflow-checks = true